<resources>
    <string name="app_name">Distance Calculation</string>
    <string name="confirm">Calculate</string>

    <string name="prompt_start">Point A. ex : Erich-Weinert Str 140,10409, Berlin</string>
    <string name="prompt_end">Point B. ex: Rosenthaler Straße 40-41, 10178 Berlin</string>
    <string name="error_invalid_start">This starting point address is invalid</string>
    <string name="error_invalid_end">This end point address is invalid</string>
    <string name="error_field_required">This field is required</string>

    <string name="error_from_query">Error from calculation</string>

    <string name="t_mode">Transportation mode:</string>
    <string name="tm_drive">driving</string>
    <string name="tm_walk">walking</string>
    <string name="tm_bike">bicycling</string>
    <string name="tm_transit">transit</string>

    <string name="result_distance">Distance estimated: {0}</string>

    <string name="history">Search history</string>
    <string name="vh_start_point">Start: {0}</string>
    <string name="vh_end_point">End: {0}</string>
    <string name="vh_mode">Mode: {0}</string>
    <string name="vh_distance">Distance: {0}</string>

</resources>
