<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_margin"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    tools:context="com.raychenon.distancecalculation.FormActivity">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/start_auto_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_start"
            android:inputType="text"
            android:text="Erich-Weinert Str 140,10409, Berlin"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/end_auto_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_end"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:text="Rosenthaler Straße 40-41, 10178 Berlin"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t_mode"
        />
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_driving"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_driving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tm_drive"/>
        <RadioButton android:id="@+id/radio_walking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tm_walk"/>
        <RadioButton android:id="@+id/radio_bike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tm_bike"/>
        <RadioButton android:id="@+id/radio_transit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tm_transit"/>
    </RadioGroup>

    <Button
        android:id="@+id/calculate_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/distance_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_margin"
        android:text="@string/history"
        android:textStyle="bold"
        android:textSize="14sp"
        />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_divider"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/history_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"/>

</LinearLayout>
